corrects the last rules compliance